# Visualizing-the-Impact-of-ENSO-Phases-on-Indian-Monsoon

./: .gitignore  README.md  dashboard_graphs_plan.md  dataset_and_backend.md  geo_json.py
Frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Frontend/plans/: ARCHIVED_create-an-interactive-and-inherited-brooks-agent-a6a247a2b443eeb4a.md  ARCHIVED_create-an-interactive-and-inherited-brooks.md
Frontend/src/app/: App.tsx
Frontend/src/app/components/: ChartCard.tsx  ColorLegend.tsx  DashboardHeader.tsx  GlobalFilterBar.tsx  GlobalFilterSidebar.tsx  RegionTooltip.tsx
Frontend/src/app/context/: DataProvider.tsx  FilterContext.tsx
Frontend/src/app/data/: api.ts  constants.ts  index.ts  india-map.ts  types.ts  useApiData.ts  utils.ts
Frontend/src/imports/: dashboard_graphs_plan.md
Frontend/src/styles/: index.css
backend/: .gitignore  README.md  database.py  main.py  pyproject.toml
backend/backend/: config.py  main.py
backend/backend/routers/: correlation.py  ndvi.py  rainfall.py  sst.py
backend/routers/: correlation.py  oni.py  rainfall.py  sst.py
backend/scripts/: 00_init_db.py  01_parse_ersst.py  02_parse_oisst.py  03_load_rainfall.py  04_compute_oni.py  05_compute_rainfall_anomalies.py  06_compute_correlations.py  07_parse_ndvi.py
backend/tests/: test_rainfall.py  test_sst.py
scripts/: 01_parse_ersst.py  02_parse_oisst.py  03a_load_weekly_rainfall.py  05_compute_rainfall_anomalies.py  06_compute_correlations.py  07_parse_ndvi.py  download_data.py
tests/: test_correlation.py  test_ndvi.py  test_oni.py
(+48 files in other folders)
