[project]
name = "cs661-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2026.7.0",
    "fastapi>=0.139.0",
    "geopandas>=1.1.4",
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "netcdf4>=1.7.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "rasterio>=1.5.0",
    "rasterstats>=0.21.0",
    "scipy>=1.18.0",
    "uvicorn>=0.51.0",
    "xarray>=2026.7.0",
]
